# daily-agenda-email

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yml  compose.yaml  pyproject.toml
.claude/: CLAUDE.md
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yml  deploy.yml
docs/superpowers/plans/: 2026-03-22-daily-agenda-email.md
docs/superpowers/specs/: 2026-03-22-daily-agenda-email-design.md
infra/: .terraform.lock.hcl  backend.hcl  data.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars  variables.tf
src/: config.py  email.py  google_auth.py  google_calendar.py  main.py  scheduler.py  secrets.py  todoist.py
src/templates/: agenda.html
tests/: conftest.py  test_config.py  test_email.py  test_google_auth.py  test_google_calendar.py  test_main.py  test_scheduler.py  test_secrets.py  test_todoist.py
